src/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: "SourceSerif4";
  src: url("./SourceSerif4_18pt-Regular.woff") format("woff");
  font-style: normal;
}

@font-face {
  font-family: "Inter";
  src: url("./Inter_18pt-Regular.woff") format("woff");
}

body {
  background-color: #d9d9d9;
}

.header {
  background-color: #eff1f3;
  border-radius: 3px;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 25%);
  width: auto;
  height: 110px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 3em;
  gap: 40em;
}

.logo-wrapper {
  width: 230px;
  height: 90px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  padding: 5px;
}

.logo-wrapper .logo {
  height: 80px;
}

.headerlogo-text {
  font-family: "SourceSerif4";
  font-size: 2em;
  font-weight: 500;
}

.nav {
  width: 330px;
  height: 90px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
}

.nav > ul {
  display: flex;
  width: 300px;
  list-style: none;
  gap: 50px;
}

button {
  cursor: pointer;
}

ul > li > button {
  font-size: 1.5em;
  border: none;
}

.content-wrapper {
  height: 91.3vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: none;
}

.content {
  margin-top: 50px;
  background-color: #223843;
  width: 75%;
  height: 90%;
  position: relative;
}

.content::before {
  content: url("./chef.png");
  position: absolute;
  top: 18%;
  right: 66%;
  height: 600px;
  opacity: 40%;
}

.text-wrapper {
  display: flex;
  flex-direction: column;
  width: 25%;
  height: 40%;
  color: #f2f0ef;
  padding: 10px;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 48%;
  right: 49%;
}

.h3 {
  font-family: "SourceSerif4";
  font-size: 2.5em;
  font-weight: 600;
}

.p {
  font-family: "SourceSerif4";
  font-size: 2em;
  font-size: 500;
}

.division-line {
  border-top: 2px solid white;
  width: 88%;
}

.image-holder {
  border: 2px groove #cfbebe;
  width: 400px;
  height: 450px;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 47%;
  left: 69%;
  border-radius: 16px;
  display: flex;
  overflow: hidden;
  box-shadow: 10px 25px 30px rgba(46, 46, 56, 0.3);
}

.img {
  animation: slide 16s infinite;
}

@keyframes slide {
  0% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(0);
  }
  30% {
    transform: translateX(-100%);
  }
  50% {
    transform: translateX(-100%);
  }
  55% {
    transform: translateX(-200%);
  }
  75% {
    transform: translateX(-200%);
  }
  80% {
    transform: translateX(-300%);
  }
  100% {
    transform: translateX(-300%);
  }
}

